2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs, Banter/HIGMessageDialog.cs: integrated patch
	  from Johnny Jacob <johnnyjacob@gmail.com> 

2007-05-30  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added AvatarManager.cs to build
	* Banter/AvatarSelector.cs: Modified to use the new AvatarMenuItem
	  events and update the avatar
	* Banter/AvatarMenuItem.cs: Updated to handle all events and trigger an
	  event when a new avatar is selected
	* Banter/AvatarManager.cs: new class to manage all cached avatars. 
	  Currently it's in memory only.
	* Banter/AvatarButton.cs: Changed AvatarButton to also store the index
	  of the button to be retrieved when clicked
	* Banter/Makefile.am: Updated to include AvatarManager.cs

2007-05-30  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Added AvatarButton
	* Banter/ComplexMenuItem.cs: Added from Banshee project.... Awesome
	  widget!  Thanks Aaron!
	* Banter/AvatarSelector.cs: Updated to use AvatarMenuItem
	* Banter/AvatarMenuItem.cs: Updated to use cool new ComplexMenuItem
	  class
	* Banter/AvatarButton.cs: new class for use in the AvatarSelector

2007-05-30  Brady Anderson <banderso@novell.com> 

	* Banter/Application.cs, Banter/Conversation.cs: Added event support
	  when a video channel initializes and connects

2007-05-30  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs, Banter/Application.cs, Banter/Conversation.cs:
	  Added code to handle incoming video conversation

2007-05-30  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/AvatarSelector.cs: Added AvatarMenuItem to menu
	* Banter/AvatarMenuItem.cs: Updated to test adding multiple images

2007-05-30  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: Added a property to expose the ObjectPath for the
	  connection
	* Banter/Application.cs: added temporary method to start a video chat
	* Banter/Conversation.cs: Added code to support a video conversation
