@@ -1,4 +1,5 @@
-SUBDIRS = tapioca-sharp Banter data po
+#SUBDIRS = tapioca-sharp WebKit Banter data po
+SUBDIRS = Banter data po
 
 pkglib_DATA =  $(DLL_REFERENCES)
 DLL_REFERENCES =   $(top_srcdir)/external/db4o/6.1/Db4objects.Db4o.dll
